# ham

./: .gitignore  README.md  TEMPERATURE_ANNEALING.md  data.py  debug_hopfield.py  diagnose_hopfield.py  hopfield.py  main.py  models.py  proj.py  pyproject.toml  training.py  visualization.py
