[project]
name = "jax-ml-skeleton"
version = "0.1.0"
description = "A minimal JAX/Equinox ML training skeleton"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "orbax-checkpoint>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
